--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whack-a-mole",
   "version": "1.0.0",
-  "description": "A whack-a-mole demo app highlighting vue, nuxt, hapi, &amp; buety",
+  "description": "A whack-a-mole demo app highlighting vue, nuxt, hapi, & buety",
   "author": "Jeremy R DeYoung",
   "private": true,
   "scripts": {
@@ -13,29 +13,31 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
-    "hapi-nuxt": "^1.0.1",
-    "nuxt-buefy": "^0.3.2",
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^2.6.0"
+    "@nuxtjs/pwa": "^2.6.0",
+    "cross-env": "^5.2.0",
+    "hapi-nuxt": "^1.0.1",
+    "nuxt": "^2.4.0",
+    "nuxt-buefy": "^0.3.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
     "@nuxtjs/eslint-config": "^0.0.1",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.15.1",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-config-standard": ">=12.0.0",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-import": ">=2.16.0",
     "eslint-plugin-jest": ">=22.3.0",
     "eslint-plugin-node": ">=8.0.1",
-    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-plugin-nuxt": "^0.4.3",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
-    "eslint-loader": "^2.1.2",
     "eslint-plugin-vue": "^5.2.2",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4"
+    "nodemon": "^1.18.9",
+    "prettier": "^1.16.4",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0"
   }
 }
