--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "nodemon": "^1.18.9",
     "prettier": "^1.16.4",
     "pug": "^2.0.3",
-    "pug-plain-loader": "^1.0.0"
+    "pug-plain-loader": "^1.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   }
 }
