--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
     "hapi-nuxt": "^1.0.1",
+    "moment": "^2.24.0",
     "nuxt": "^2.4.0",
     "nuxt-buefy": "^0.3.2"
   },
