--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
+    "favicons": "^5.3.0",
     "hapi-nuxt": "^1.0.1",
     "moment": "^2.24.0",
     "nuxt": "^2.4.0",
