--- a/package.json
+++ b/package.json
@@ -13,14 +13,28 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-pro": "^5.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-brands-svg-icons": "^5.8.1",
+    "@fortawesome/free-regular-svg-icons": "^5.8.1",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/pro-light-svg-icons": "^5.8.1",
+    "@fortawesome/pro-regular-svg-icons": "^5.8.1",
+    "@fortawesome/pro-solid-svg-icons": "^5.8.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
+    "email-validator": "^2.0.4",
     "favicons": "^5.3.0",
     "hapi-nuxt": "^1.0.1",
+    "mobile-detect": "^1.4.3",
     "moment": "^2.24.0",
     "nuxt": "^2.4.0",
-    "nuxt-buefy": "^0.3.2"
+    "nuxt-buefy": "^0.3.2",
+    "nuxt-fontawesome": "^0.4.0",
+    "ua-parser-js": "^0.7.19"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
