--- a/package.json
+++ b/package.json
@@ -25,15 +25,23 @@
     "@fortawesome/pro-solid-svg-icons": "^5.8.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
+    "bcryptjs": "^2.4.3",
     "cross-env": "^5.2.0",
     "email-validator": "^2.0.4",
     "favicons": "^5.3.0",
+    "hapi-auth-jwt2": "^8.4.0",
     "hapi-nuxt": "^1.0.1",
+    "knex": "^0.16.5",
     "mobile-detect": "^1.4.3",
     "moment": "^2.24.0",
+    "mssql": "^5.1.0",
+    "mysql": "^2.17.1",
     "nuxt": "^2.4.0",
     "nuxt-buefy": "^0.3.2",
     "nuxt-fontawesome": "^0.4.0",
+    "objection": "^1.6.8",
+    "objection-db-errors": "^1.1.1",
+    "postmark": "^2.2.4",
     "ua-parser-js": "^0.7.19"
   },
   "devDependencies": {
