--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@fortawesome/pro-solid-svg-icons": "^5.8.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/style-resources": "^0.1.2",
     "bcryptjs": "^2.4.3",
+    "cookie-universal-nuxt": "^2.0.14",
     "cross-env": "^5.2.0",
     "email-validator": "^2.0.4",
     "favicons": "^5.3.0",
